Swagger docs updated & additional security measures & payments config added
